# anything

./: .gitignore  Cargo.toml  buf.gen.yaml
crates/store/: Cargo.toml
crates/store/src/: db.rs  lib.rs  main.rs  proto.rs  scanner.rs  service.rs  types.rs
crates/ui/macos/anything/: BackendLauncher.swift  ContentView.swift  FileSearchModels.swift  QuickPreviewCoordinator.swift  SearchPanelView.swift  SidebarView.swift  TreemapModels.swift  TreemapWindowView.swift  WindowKeyMonitor.swift  anythingApp.swift
crates/ui/macos/anything.xcodeproj/: project.pbxproj
crates/ui/macos/anything.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
crates/ui/macos/anything/Assets.xcassets/AppIcon.appiconset/: Contents.json
entry/: Cargo.toml
entry/src/: main.rs
proto/: store.proto
