[package]
name = "store"
version = "0.0.1"
edition = "2024"

[lib]
name = "store"
path = "src/lib.rs"

[[bin]]
name = "store"
path = "src/main.rs"

[dependencies]
anyhow = "1"
buffa = { version = "0.3", features = ["json"] }
buffa-types = { version = "0.3", features = ["json"] }
connectrpc = { version = "0.3.1", features = ["client", "server"] }
directories = "5"
duckdb = { version = "1", features = ["bundled"] }
futures = "0.3"
http = "1"
http-body = "1"
jwalk = "0.8"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server", "tokio"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
